#pragma once

//======================================================================================================================
namespace input {
    //==================================================================================================================
    enum class DeviceType {
        Keyboard,
        Mouse
    };
}
