@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
enum DeviceType {
    Keyboard,
    Mouse
}

'=======================================================================================================================
struct DeviceInfo {
    + publicName
    + type
}

'------------------------------------------------------------------------------------------------------------------------
DeviceInfo --> DeviceType

'=======================================================================================================================
class DeviceMgr {
    + ctor(Framework&)
==
    + update()
--
    + getKeyboard()
    + getMouse()
--
    - _keyboard
    - _mouse
}

'------------------------------------------------------------------------------------------------------------------------
DeviceMgr *-- Keyboard
DeviceMgr *-- Mouse

'=======================================================================================================================
class Device {
    + ctor(AppEventMgr&)
==
    + {abstract} update()
    + {abstract} getDeviceInfo()
--
    + setEventMonitoring(bool)
}

'------------------------------------------------------------------------------------------------------------------------
Device *-- DeviceInfo

'=======================================================================================================================
class Keyboard implements Device {
    + ctor(AppEventMgr&)
==
    + {abstract} allowTextInputEvents() -> TextInputEventsGuard
--
    + {abstract} getDeviceState() -> KeyboardState
}

'-----------------------------------------------------------------------------------------------------------------------
Keyboard *-- KeyboardState

'=======================================================================================================================
class Mouse implements Device {
    + ctor(AppEventMgr&)
==
    + {abstract} setRelativeMode(bool)
    + {abstract} getRelativeMode() -> bool
--
    + {abstract} getDeviceState() -> MouseState
}

'-----------------------------------------------------------------------------------------------------------------------
Mouse *-- MouseState

'=======================================================================================================================
class KeyboardState {
==
    + {abstract} update()
--
    + getKeyState(Key)
    + getKeyState(KeyScancode)
    + getModState()
}

'=======================================================================================================================
class MouseState {
==
    + {abstract} update()
--
    + getKeyState(MouseKey)
    + getCursorPosition() -> ScreenPoint
    + getImmediateCursorPosition() -> ScreenPoint
}

'=======================================================================================================================
@enduml
